# Preprocessing

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/defibrilator_preprocessing/: data_cleaning.py  params.py  preprocess.py  signal_scaling.py
tests/: test_signal_scaling.py
